--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,18 @@
-/**app.wxss**/
-.container {
-  height: 100%;
+/* 全局样式 */
+.tab-bar-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  justify-content: center;
+  flex: 1;
+}
+
+.tab-bar-text {
+  text-align: center;
+  font-size: 12px;
+  color: #000; /* 默认文字颜色 */
+}
+
+.tab-bar-text.active {
+  color: #0ba360; /* 激活状态的文字颜色 */
+}
