--- a/pages/projectDetail/projectDetail.wxml
+++ b/pages/projectDetail/projectDetail.wxml
@@ -1,14 +1,54 @@
-<view class="project-detail">
-  <view class="project-title">{{project.title}}</view>
-  <view class="project-type">{{project.type}}</view>
-  <view class="involved-majors">{{project.majors}}</view>
-  <view class="schedule">
-    <picker mode="selector" range="{{scheduleOptions}}" bindchange="onScheduleChange">{{project.schedule}}</picker>
+<view class="form-container">
+  <view class="form-item">
+    <text>项目名称：</text>
+    <text>{{project.projectName}}</text>
   </view>
-  <view class="contact-info">{{project.contact}}</view>
-  <view class="member-requirements">{{project.requirements}}</view>
-  <view class="project-introduction">{{project.introduction}}</view>
-  
-  <button class="discussion-btn" bindtap="goToDiscussion">讨论区</button>
-  <button class="join-btn" bindtap="applyToJoin">申请加入</button>
+  <view class="form-item">
+    <text>项目类型：</text>
+    <text>{{project.type}}</text>
+  </view>
+  <view class="form-item">
+    <text>所需专业：</text>
+    <text>{{project.majors}}</text>
+  </view>
+  <view class="form-item">
+    <text>时间安排：</text>
+    <text>{{project.schedule}}</text>
+  </view>
+  <view class="form-item">
+    <text>联系方式：</text>
+    <text>{{project.contact}}</text>
+  </view>
+  <view class="form-item">
+    <text>成员要求：</text>
+    <text>{{project.requirements}}</text>
+  </view>
+  <view class="form-item">
+    <text>项目简介：</text>
+    <text>{{project.introduction}}</text>
+  </view>
+
+  <!-- 新增的参与者显示 -->
+  <view class="form-item">
+    <text>参与者：</text>
+    <view>
+      <!-- 使用三元运算符判断是否为最后一项，决定是否加逗号 -->
+      <block wx:for="{{project.participants}}" wx:key="index">
+        <text>{{item}}{{index < project.participants.length - 1 ? ', ' : ''}}</text>
+      </block>
+    </view>
+  </view>
+
+  <!-- "申请加入" 按钮 -->
+  <view class="form-submit">
+    <button class="join-btn" bindtap="applyToJoin">申请加入</button>
+  </view>
+
+  <!-- "讨论区" 按钮 -->
+  <view class="form-submit">
+    <button class="discussion-btn" bindtap="goToDiscussion">进入讨论区</button>
+  </view>
+
+  <!-- 收藏按钮放到右上角，使用图片 -->
+  <image class="collect-icon" src="image/collection.jpg" bindtap="handleCollectClick" />
 </view>
