--- a/pages/chatPage/chatPage.wxml
+++ b/pages/chatPage/chatPage.wxml
@@ -1,11 +1,14 @@
 <view class="chat-container">
-  <view class="chat-content">
+  <scroll-view class="chat-content" scroll-y="true">
     <!-- 聊天内容 -->
-    <block wx:for="{{chatMessages}}" wx:key="index">
-      <view class="message-item">{{item}}</view>
+    <block wx:for="{{chatMessages}}" wx:key="unique">
+      <view class="message-item {{item.from === 'me'? 'my-message' : 'other-message'}}">
+        <image class="avatar {{item.from === 'me'? 'my-avatar' : 'other-avatar'}}" src="{{item.from === 'me'? userAvatar : '默认对方头像路径'}}"></image>
+        <view class="message-content">{{item.text}}</view>
+      </view>
     </block>
-  </view>
-  <view class="input-area">
+  </scroll-view>
+  <view class="input-fixed">
     <input type="text" placeholder="输入消息" bindinput="handleInput"/>
     <view class="send-button" bindtap="sendMessage">发送</view>
   </view>
