--- a/pages/homePage/homePage.wxml
+++ b/pages/homePage/homePage.wxml
@@ -1,31 +1,40 @@
 <!-- 搜索框 -->
 <view class="search-bar">
   <input class="search-input" type="text" placeholder="搜索" bindinput="handleInput"/>
+  <!-- 修复: 使用 bindtap="handleSearch" 而非 onSearch -->
+  <image class="image-style" src="image/search.jpg" mode="aspectFit" hover-class="image-hover" bindtap="handleSearch"></image>
   <view class="add-button" bindtap="goToAddProjectPage">+</view>
 </view>
 
 <!-- 部分分类栏 -->
-<view class="category-section">
-  <view class="category-row">
-    <view class="category-item" wx:for="{{visibleCategories}}" wx:key="{{index}}" bindtap="handleCategoryTap" data-category="{{item}}">
-      {{item}}
-    </view>
+<view class="category-row">
+  <view class="category-item" wx:for="{{visibleCategories}}" wx:key="{{index}}" bindtap="handleCategoryTap" data-category="{{item}}">
+    {{item}}
   </view>
-</view>
-
-<!-- 展开/收起按钮 -->
-<view class="toggle-all" bindtap="toggleAllCategories">
-  {{showAllCategories ? '收起' : '展开全部'}}
+  <!-- 展开/收起按钮 -->
+  <view class="toggle-all" bindtap="toggleAllCategories">
+    {{showAllCategories ? '收起' : '展开全部'}}
+  </view>
 </view>
 
 <!-- 项目栏 -->
 <view class="project-section">
-  <view class="project-item" wx:for="{{projectItems}}" wx:key="{{index}}" bindtap="handleProjectTap" data-index="{{index}}">
-    <view class="project-square"></view>
-  </view>
+  <block wx:if="{{searchResults.length > 0}}">
+    <view class="project-item" wx:for="{{searchResults}}" wx:key="{{index}}" bindtap="handleProjectTap" data-index="{{index}}">
+      <view class="project-square"></view>
+      <text class="project-title">{{item.projectName}}</text>
+    </view>
+  </block>
+  <block wx:else>
+    <text class="no-results">未找到匹配内容</text>
+  </block>
 </view>
+
+<!-- 刷新按钮，位于页面左下角 -->
+<image class="refresh-image" src="image/OIP.jpg" mode="aspectFit" bindtap="handleRefreshTap"></image>
 
 <!-- 主页内容 -->
 <view class="content">
   <!-- 这里是其他内容 -->
 </view>
+
