--- a/pages/loginRegisterPage/loginRegisterPage.wxml
+++ b/pages/loginRegisterPage/loginRegisterPage.wxml
@@ -1,8 +1,36 @@
 <view class="container">
-  <input type="text" placeholder="请输入手机号/邮箱" bindinput="handleInput" name="username"/>
-  <input type="password" placeholder="请输入密码" bindinput="handleInput" name="password"/>
-  <input type="text" placeholder="请输入用户名（仅注册时需要）" bindinput="handleInput" name="registerUsername" wx:if="{{showRegister}}"/>
-  <input type="password" placeholder="请再次输入密码（仅注册时需要）" bindinput="handleInput" name="confirmPassword" wx:if="{{showRegister}}"/>
-  <button bindtap="submit">{{showRegister? '注册' : '登录'}}</button>
+
+  <view class = 'title'> {{showRegister?'注册账号密码':'账号密码登录'}} </view>
+
+  <view class = 'input1'>
+  <view class = 'user'>账号</view>
+  <input type="text" placeholder="请输入手机号/邮箱" bindinput="handleInputOnU" />
+  </view>
+
+  <view class = 'input2'>
+  <view class = 'component1'>
+     <view  class = 'password'>密码</view>
+      <input type="password" placeholder="请输入密码" bindinput="handleInputOnP" />
+  </view>
+      <view  class = 'forgotPassword' bindtap="forgotPassword"> 忘记密码？</view>
+  </view>
+
+
+
+  <button bindtap="submit" disabled= "{{!agree && !showRegister}}" >{{showRegister? '注册' : '登录'}}</button>
   <view class="{{showRegister? 'login-link' : 'register-link'}}" bindtap="toggleRegister">{{showRegister? '已有账号，去登录' : '注册新用户'}}</view>
+
+  <view class="slogan">
+    交汇智慧，共创未来跨学科交流新平台
+  </view>
+  <view class="checkbox-container">
+  <checkbox-group bindchange="onCheckboxChange">
+    <view>
+      <checkbox  checked="{{agree}}"/> 我已阅读并同意
+      <text>《用户协议》</text>
+      <text>《隐私政策》</text>
+    </view>
+  </checkbox-group>
+</view>
+
 </view>
