--- a/app.wxss
+++ b/app.wxss
@@ -6,13 +6,15 @@
   justify-content: center;
   flex: 1;
 }
+/* 设置全局背景颜色为蔚蓝色 */
+
 
 .tab-bar-text {
   text-align: center;
-  font-size: 12px;
-  color: #000; /* 默认文字颜色 */
+  font-size: 500px;
+  color: rgb(20, 7, 136); /* 默认文字颜色 */
 }
 
 .tab-bar-text.active {
-  color: #0ba360; /* 激活状态的文字颜色 */
+  color: #263766; /* 激活状态的文字颜色 */
 }
