--- a/pages/homePage/homePage.wxml
+++ b/pages/homePage/homePage.wxml
@@ -1,14 +1,37 @@
 <!-- 搜索框 -->
 <view class="search-bar">
-  <input class="search-input" type="text" placeholder="搜索" bindinput="handleInput"/>
-  <!-- 修复: 使用 bindtap="handleSearch" 而非 onSearch -->
-  <image class="image-style" src="image/search.jpg" mode="aspectFit" hover-class="image-hover" bindtap="handleSearch"></image>
+  <input class="search-input" type="text" placeholder="搜索" 
+         bindinput="handleInput" 
+         bindfocus="handleFocus" 
+         bindblur="handleBlur"/>
+  <image class="image-style" src="image/search.jpg" mode="aspectFit" 
+         hover-class="image-hover" bindtap="handleSearch"></image>
   <view class="add-button" bindtap="goToAddProjectPage">+</view>
+</view>
+
+<!-- 最近搜索记录 -->
+<view class="recent-searches" wx:if="{{showRecentSearches}}">
+  <view class="recent-title">最近搜索</view>
+  <view class="recent-item" wx:for="{{recentSearches}}" wx:key="{{index}}" 
+        bindtap="handleDeleteSearch" data-keyword="{{item}}">
+    {{item}}
+    <text class="delete-icon">✖</text>
+  </view>
+</view>
+
+<!-- 猜你想搜标签 -->
+<view class="suggested-tags" wx:if="{{showSuggestedTags}}">
+  <view class="suggested-title">猜你想搜</view>
+  <view class="tag-item" wx:for="{{suggestedTags}}" wx:key="{{index}}" 
+        bindtap="handleTagTap" data-tag="{{item}}">
+    {{item}}
+  </view>
 </view>
 
 <!-- 部分分类栏 -->
 <view class="category-row">
-  <view class="category-item" wx:for="{{visibleCategories}}" wx:key="{{index}}" bindtap="handleCategoryTap" data-category="{{item}}">
+  <view class="category-item" wx:for="{{visibleCategories}}" wx:key="index" 
+        bindtap="handleCategoryTap" data-category="{{item}}">
     {{item}}
   </view>
   <!-- 展开/收起按钮 -->
@@ -19,22 +42,32 @@
 
 <!-- 项目栏 -->
 <view class="project-section">
-  <block wx:if="{{searchResults.length > 0}}">
-    <view class="project-item" wx:for="{{searchResults}}" wx:key="{{index}}" bindtap="handleProjectTap" data-index="{{index}}">
-      <view class="project-square"></view>
+  <!-- 当isCategory为false时，显示项目列表 -->
+  <block wx:if="{{!isCategory && allCategory.length > 0}}">
+    <view class="project-item" wx:for="{{allCategory}}" wx:key="{{index}}"
+          bindtap="handleProjectTap" data-index="{{index}}" 
+          style="background-image: url('image/background.png');"> <!-- 设置背景图片 -->
       <text class="project-title">{{item.projectName}}</text>
     </view>
   </block>
-  <block wx:else>
-    <text class="no-results">未找到匹配内容</text>
+</view>
+<view class="project-section">
+  <block wx:if="{{isCategory && searchResults.length > 0}}">
+    <view class="project-item" wx:for="{{searchResults}}" wx:key="{{index}}"
+          bindtap="handleProjectTap" data-index="{{index}}" 
+          style="background-image: url('image/background.png');"> <!-- 设置背景图片 -->
+      <text class="project-title">{{item.projectName}}</text>
+    </view>
   </block>
 </view>
 
 <!-- 刷新按钮，位于页面左下角 -->
-<image class="refresh-image" src="image/OIP.jpg" mode="aspectFit" bindtap="handleRefreshTap"></image>
+<image class="refresh-image" src="image/OIP.jpg" mode="aspectFit" 
+       bindtap="handleRefreshTap"></image>
 
 <!-- 主页内容 -->
 <view class="content">
   <!-- 这里是其他内容 -->
 </view>
+
 
